stage2 - creating roboletric tests (partial)

--- a/Music Player/Stage 2/task.html
+++ b/Music Player/Stage 2/task.html
@@ -1,5 +1,13 @@
 <html>
 
+<p>
+    Obs: The passage of time is emulated on test, don't use <code>System.currentTimeMillis()</code>
+    because it won't work.
+    You can use this alternative instead <code>SystemClock.currentGnssTimeClock().millis() </code>,
+    but it is possible to pass without using this at all.
+</p>
+
+
 <h2>Task Description: Tips & Tricks</h2>
 
 <p>This is a task description file.
